Progress, maybe, but lib load errors still shown during native build